added a route to get pentest info
